# cm-training-devops

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml
.github/workflows/: github-actions-demo.yml  github-actions-docker.yml  github-actions-pre-commit  github-actions-pre-commit.yml  github-actions-pytest-ruff.yml  pr-checks.yml  release-dev.yml
math_api/: .flake8  Dockerfile  pyproject.toml
math_api/math_api/: app.py
math_api/math_api/api/: router.py
math_api/math_api/math/: fibonacci.py  operations.py
math_api/tests/: test_math_add.py  test_math_div.py  test_math_fib.py  test_math_mul.py  test_math_sub.py
