[tool.poetry]
name = "math-api"
version = "0.1.0"
description = ""
authors = ["dataroots <info@dataroots.io>"]
readme = "README.md"
packages = [{include = "math_api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.3.0"
flake8 = "^6.0.0"
pytest = "^7.3.1"
pytest-timeout = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
